// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lowFareCalendarPage render dollars points switch should have dollar/points switch when hasLapChild is false 1`] = `
<body>
  <div>
    <div
      class="low-fare-calendar-page"
    >
      <div>
        <div
          class="page-header low-fare-calendar-page--header py4"
          id=""
        >
          <span>
            AIR_BOOKING__LOW_FARE_CALENDAR__HEADER
             
            AUS - ATL
          </span>
          <div
            class="money-or-points money-or-points_dark switch-button"
          >
            <span
              class="switch-button--item active money-or-points--money"
            >
              $
            </span>
            <span
              class="switch-button--item money-or-points--points"
            >
              Pts
            </span>
          </div>
        </div>
        <div />
      </div>
      <div
        class="bgpdkblue white p5"
        data-qa="dot-message-block"
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
      </div>
      <div
        class="low-fare-outbound"
      >
        <div
          class="toast-dialog"
          id="toastDialogId"
        >
          AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_DEPART
        </div>
        <div
          class="low-fare-date"
        >
          <div
            class="selected-date"
          >
            <div
              class="flight-logo-wrapper svg-wrapper low-fare--col-icon"
            >
              <i
                class="full-width-svg icon icon_airplane-depart"
              />
            </div>
            <div
              class="flight-label-wrapper"
            >
              <div
                class="label-container"
              >
                <div
                  class="label-container--label"
                >
                  Depart 
                </div>
                <div
                  class="label-container--content"
                >
                  Tue, Jan 15, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="calendar-select"
          >
            <i
              class="full-width-svg icon icon_calender"
            />
          </div>
        </div>
        <div
          class="low-fare-pointer"
        >
          <div
            class="low-fare-pointer--lines"
          >
            <div
              class="low-fare-pointer--left-line"
            />
          </div>
          <div
            class="low-fare-pointer--center-line"
          />
        </div>
        <div
          class="low-fare-calendar"
        >
          <div
            class="low-fare-calendar--spacer-left"
          />
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="calendar-month"
          >
            <div
              class="month-indicator"
              data-qa="calendar-month-indicator"
            >
              JAN
            </div>
            <div
              class="calendar-days-container"
            >
              <div
                class="calendar-day"
                data-date="2020-01-15"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-15"
                  style="height: 19rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      422
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  WED
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-16"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-16"
                  style="height: 3.7rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      386
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  THU
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-17"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-17"
                  style="height: 14.325000000000001rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      411
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  FRI
                </div>
              </div>
            </div>
          </div>
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="low-fare-calendar--spacer-right"
          />
        </div>
        <div
          class="low-fare-calendar--menu-footer"
        />
      </div>
      <div
        class="low-fare-inbound"
      >
        <div
          class="toast-dialog"
          id="toastDialogId"
        >
          AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_RETURN
        </div>
        <div
          class="low-fare-date"
        >
          <div
            class="selected-date"
          >
            <div
              class="flight-logo-wrapper svg-wrapper low-fare--col-icon-return"
            >
              <i
                class="full-width-svg icon icon_airplane-return"
              />
            </div>
            <div
              class="flight-label-wrapper"
            >
              <div
                class="label-container"
              >
                <div
                  class="label-container--label"
                >
                  Return 
                </div>
                <div
                  class="label-container--content"
                >
                  Tue, Jan 15, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="calendar-select"
          >
            <i
              class="full-width-svg icon icon_calender"
            />
          </div>
        </div>
        <div
          class="low-fare-pointer"
        >
          <div
            class="low-fare-pointer--lines"
          >
            <div
              class="low-fare-pointer--left-line-returning"
            />
          </div>
          <div
            class="low-fare-pointer--center-line-returning"
          />
        </div>
        <div
          class="low-fare-calendar low-fare-calendar--inbound"
        >
          <div
            class="low-fare-calendar--spacer-left"
          />
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="calendar-month"
          >
            <div
              class="month-indicator"
              data-qa="calendar-month-indicator"
            >
              JAN
            </div>
            <div
              class="calendar-days-container"
            >
              <div
                class="calendar-day"
                data-date="2020-01-17"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-17"
                  style="height: 19rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      436
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  FRI
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-18"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-18"
                  style="height: 3.7rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      121
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  SAT
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-19"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-19"
                  style="height: 10.88857142857143rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      269
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  SUN
                </div>
              </div>
            </div>
          </div>
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="low-fare-calendar--spacer-right"
          />
        </div>
        <div
          class="low-fare-calendar--menu-footer"
        />
      </div>
      <div
        class="low-fare-calendar-page--selections "
      >
        <div
          class="low-fare-calendar-page--selection outbound"
        >
          <div
            class="header"
          >
            Selected Depart
          </div>
          <div
            class="value"
          >
            - -
          </div>
        </div>
        <div
          class="low-fare-calendar-page--selection inbound"
        >
          <div
            class="header"
          >
            Selected Return
          </div>
          <div
            class="value"
          >
            - -
          </div>
        </div>
      </div>
      <div
        class="p4 bgpblue"
      >
        <button
          class="continue button button--fluid larger button--yellow"
          type="button"
        >
          AIR_BOOKING__SELECT_FLIGHTS
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`lowFareCalendarPage render dollars points switch should not have dollar/points switch when hasLapChild is true 1`] = `
<body>
  <div>
    <div
      class="low-fare-calendar-page"
    >
      <div>
        <div
          class="page-header low-fare-calendar-page--header py4"
          id=""
        >
          <span>
            AIR_BOOKING__LOW_FARE_CALENDAR__HEADER
             
            AUS - ATL
          </span>
        </div>
        <div />
      </div>
      <div
        class="bgpdkblue white p5"
        data-qa="dot-message-block"
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
      </div>
      <div
        class="low-fare-outbound"
      >
        <div
          class="toast-dialog"
          id="toastDialogId"
        >
          AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_DEPART
        </div>
        <div
          class="low-fare-date"
        >
          <div
            class="selected-date"
          >
            <div
              class="flight-logo-wrapper svg-wrapper low-fare--col-icon"
            >
              <i
                class="full-width-svg icon icon_airplane-depart"
              />
            </div>
            <div
              class="flight-label-wrapper"
            >
              <div
                class="label-container"
              >
                <div
                  class="label-container--label"
                >
                  Depart 
                </div>
                <div
                  class="label-container--content"
                >
                  Tue, Jan 15, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="calendar-select"
          >
            <i
              class="full-width-svg icon icon_calender"
            />
          </div>
        </div>
        <div
          class="low-fare-pointer"
        >
          <div
            class="low-fare-pointer--lines"
          >
            <div
              class="low-fare-pointer--left-line"
            />
          </div>
          <div
            class="low-fare-pointer--center-line"
          />
        </div>
        <div
          class="low-fare-calendar"
        >
          <div
            class="low-fare-calendar--spacer-left"
          />
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="calendar-month"
          >
            <div
              class="month-indicator"
              data-qa="calendar-month-indicator"
            >
              JAN
            </div>
            <div
              class="calendar-days-container"
            >
              <div
                class="calendar-day"
                data-date="2020-01-15"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-15"
                  style="height: 19rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      422
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  WED
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-16"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-16"
                  style="height: 3.7rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      386
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  THU
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-17"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-17"
                  style="height: 14.325000000000001rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      411
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  FRI
                </div>
              </div>
            </div>
          </div>
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="low-fare-calendar--spacer-right"
          />
        </div>
        <div
          class="low-fare-calendar--menu-footer"
        />
      </div>
      <div
        class="low-fare-inbound"
      >
        <div
          class="toast-dialog"
          id="toastDialogId"
        >
          AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_RETURN
        </div>
        <div
          class="low-fare-date"
        >
          <div
            class="selected-date"
          >
            <div
              class="flight-logo-wrapper svg-wrapper low-fare--col-icon-return"
            >
              <i
                class="full-width-svg icon icon_airplane-return"
              />
            </div>
            <div
              class="flight-label-wrapper"
            >
              <div
                class="label-container"
              >
                <div
                  class="label-container--label"
                >
                  Return 
                </div>
                <div
                  class="label-container--content"
                >
                  Tue, Jan 15, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            class="calendar-select"
          >
            <i
              class="full-width-svg icon icon_calender"
            />
          </div>
        </div>
        <div
          class="low-fare-pointer"
        >
          <div
            class="low-fare-pointer--lines"
          >
            <div
              class="low-fare-pointer--left-line-returning"
            />
          </div>
          <div
            class="low-fare-pointer--center-line-returning"
          />
        </div>
        <div
          class="low-fare-calendar low-fare-calendar--inbound"
        >
          <div
            class="low-fare-calendar--spacer-left"
          />
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="calendar-month"
          >
            <div
              class="month-indicator"
              data-qa="calendar-month-indicator"
            >
              JAN
            </div>
            <div
              class="calendar-days-container"
            >
              <div
                class="calendar-day"
                data-date="2020-01-17"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-17"
                  style="height: 19rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      436
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  FRI
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-18"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-18"
                  style="height: 3.7rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      121
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  SAT
                </div>
              </div>
              <div
                class="calendar-day"
                data-date="2020-01-19"
              >
                <div
                  class="calendar-day--fare-price"
                  data-date="2020-01-19"
                  style="height: 10.88857142857143rem;"
                >
                  <div
                    class="currency"
                  >
                    <span
                      class="money-sign"
                    >
                      $
                    </span>
                    <span
                      data-qa="total-amount"
                    >
                      269
                    </span>
                  </div>
                  
                </div>
                <div
                  class="calendar-day--menu"
                >
                  SUN
                </div>
              </div>
            </div>
          </div>
          <div
            class="low-fare-calendar--fetch-prev-next"
          >
            <img
              class="lfc-ic-load-more"
              src="/content/mkt/images/landing_pages/ic-load-more.png"
              srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
            />
          </div>
          <div
            class="low-fare-calendar--spacer-right"
          />
        </div>
        <div
          class="low-fare-calendar--menu-footer"
        />
      </div>
      <div
        class="low-fare-calendar-page--selections "
      >
        <div
          class="low-fare-calendar-page--selection outbound"
        >
          <div
            class="header"
          >
            Selected Depart
          </div>
          <div
            class="value"
          >
            - -
          </div>
        </div>
        <div
          class="low-fare-calendar-page--selection inbound"
        >
          <div
            class="header"
          >
            Selected Return
          </div>
          <div
            class="value"
          >
            - -
          </div>
        </div>
      </div>
      <div
        class="p4 bgpblue"
      >
        <button
          class="continue button button--fluid larger button--yellow"
          type="button"
        >
          AIR_BOOKING__SELECT_FLIGHTS
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`lowFareCalendarPage render should render 1`] = `
<div>
  <div
    class="low-fare-calendar-page"
  >
    <div>
      <div
        class="page-header low-fare-calendar-page--header py4"
        id=""
      >
        <span>
          AIR_BOOKING__LOW_FARE_CALENDAR__HEADER
           
          AUS - ATL
        </span>
        <div
          class="money-or-points money-or-points_dark switch-button"
        >
          <span
            class="switch-button--item active money-or-points--money"
          >
            $
          </span>
          <span
            class="switch-button--item money-or-points--points"
          >
            Pts
          </span>
        </div>
      </div>
      <div />
    </div>
    <div
      class="bgpdkblue white p5"
      data-qa="dot-message-block"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
    <div
      class="low-fare-outbound"
    >
      <div
        class="toast-dialog"
        id="toastDialogId"
      >
        AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_DEPART
      </div>
      <div
        class="low-fare-date"
      >
        <div
          class="selected-date"
        >
          <div
            class="flight-logo-wrapper svg-wrapper low-fare--col-icon"
          >
            <i
              class="full-width-svg icon icon_airplane-depart"
            />
          </div>
          <div
            class="flight-label-wrapper"
          >
            <div
              class="label-container"
            >
              <div
                class="label-container--label"
              >
                Depart 
              </div>
              <div
                class="label-container--content"
              >
                Tue, Jan 15, 2019
              </div>
            </div>
          </div>
        </div>
        <div
          class="calendar-select"
        >
          <i
            class="full-width-svg icon icon_calender"
          />
        </div>
      </div>
      <div
        class="low-fare-pointer"
      >
        <div
          class="low-fare-pointer--lines"
        >
          <div
            class="low-fare-pointer--left-line"
          />
        </div>
        <div
          class="low-fare-pointer--center-line"
        />
      </div>
      <div
        class="low-fare-calendar"
      >
        <div
          class="low-fare-calendar--spacer-left"
        />
        <div
          class="low-fare-calendar--fetch-prev-next"
        >
          <img
            class="lfc-ic-load-more"
            src="/content/mkt/images/landing_pages/ic-load-more.png"
            srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
          />
        </div>
        <div
          class="calendar-month"
        >
          <div
            class="month-indicator"
            data-qa="calendar-month-indicator"
          >
            JAN
          </div>
          <div
            class="calendar-days-container"
          >
            <div
              class="calendar-day"
              data-date="2020-01-15"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-15"
                style="height: 19rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    422
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                WED
              </div>
            </div>
            <div
              class="calendar-day"
              data-date="2020-01-16"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-16"
                style="height: 3.7rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    386
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                THU
              </div>
            </div>
            <div
              class="calendar-day"
              data-date="2020-01-17"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-17"
                style="height: 14.325000000000001rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    411
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                FRI
              </div>
            </div>
          </div>
        </div>
        <div
          class="low-fare-calendar--fetch-prev-next"
        >
          <img
            class="lfc-ic-load-more"
            src="/content/mkt/images/landing_pages/ic-load-more.png"
            srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
          />
        </div>
        <div
          class="low-fare-calendar--spacer-right"
        />
      </div>
      <div
        class="low-fare-calendar--menu-footer"
      />
    </div>
    <div
      class="low-fare-inbound"
    >
      <div
        class="toast-dialog"
        id="toastDialogId"
      >
        AIR_BOOKING__ERROR__LFC__INVERTED_BOUNDS_RETURN
      </div>
      <div
        class="low-fare-date"
      >
        <div
          class="selected-date"
        >
          <div
            class="flight-logo-wrapper svg-wrapper low-fare--col-icon-return"
          >
            <i
              class="full-width-svg icon icon_airplane-return"
            />
          </div>
          <div
            class="flight-label-wrapper"
          >
            <div
              class="label-container"
            >
              <div
                class="label-container--label"
              >
                Return 
              </div>
              <div
                class="label-container--content"
              >
                Tue, Jan 15, 2019
              </div>
            </div>
          </div>
        </div>
        <div
          class="calendar-select"
        >
          <i
            class="full-width-svg icon icon_calender"
          />
        </div>
      </div>
      <div
        class="low-fare-pointer"
      >
        <div
          class="low-fare-pointer--lines"
        >
          <div
            class="low-fare-pointer--left-line-returning"
          />
        </div>
        <div
          class="low-fare-pointer--center-line-returning"
        />
      </div>
      <div
        class="low-fare-calendar low-fare-calendar--inbound"
      >
        <div
          class="low-fare-calendar--spacer-left"
        />
        <div
          class="low-fare-calendar--fetch-prev-next"
        >
          <img
            class="lfc-ic-load-more"
            src="/content/mkt/images/landing_pages/ic-load-more.png"
            srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
          />
        </div>
        <div
          class="calendar-month"
        >
          <div
            class="month-indicator"
            data-qa="calendar-month-indicator"
          >
            JAN
          </div>
          <div
            class="calendar-days-container"
          >
            <div
              class="calendar-day"
              data-date="2020-01-17"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-17"
                style="height: 19rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    436
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                FRI
              </div>
            </div>
            <div
              class="calendar-day"
              data-date="2020-01-18"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-18"
                style="height: 3.7rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    121
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                SAT
              </div>
            </div>
            <div
              class="calendar-day"
              data-date="2020-01-19"
            >
              <div
                class="calendar-day--fare-price"
                data-date="2020-01-19"
                style="height: 10.88857142857143rem;"
              >
                <div
                  class="currency"
                >
                  <span
                    class="money-sign"
                  >
                    $
                  </span>
                  <span
                    data-qa="total-amount"
                  >
                    269
                  </span>
                </div>
                
              </div>
              <div
                class="calendar-day--menu"
              >
                SUN
              </div>
            </div>
          </div>
        </div>
        <div
          class="low-fare-calendar--fetch-prev-next"
        >
          <img
            class="lfc-ic-load-more"
            src="/content/mkt/images/landing_pages/ic-load-more.png"
            srcset="/content/mkt/images/landing_pages/ic-load-more@2x.png 2x, /content/mkt/images/landing_pages/ic-load-more@3x.png 3x"
          />
        </div>
        <div
          class="low-fare-calendar--spacer-right"
        />
      </div>
      <div
        class="low-fare-calendar--menu-footer"
      />
    </div>
    <div
      class="low-fare-calendar-page--selections "
    >
      <div
        class="low-fare-calendar-page--selection outbound"
      >
        <div
          class="header"
        >
          Selected Depart
        </div>
        <div
          class="value"
        >
          - -
        </div>
      </div>
      <div
        class="low-fare-calendar-page--selection inbound"
      >
        <div
          class="header"
        >
          Selected Return
        </div>
        <div
          class="value"
        >
          - -
        </div>
      </div>
    </div>
    <div
      class="p4 bgpblue"
    >
      <button
        class="continue button button--fluid larger button--yellow"
        type="button"
      >
        AIR_BOOKING__SELECT_FLIGHTS
      </button>
    </div>
  </div>
</div>
`;
